--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,16 +4,18 @@ nixPkgs = ['php82', 'php82Extensions.mbstring', 'php82Extensions.pdo', 'php82Ext
 [phases.install]
 cmds = [
     'composer install --no-dev --optimize-autoloader',
-    'npm install',
+    'npm ci',
     'npm run build'
 ]
 
 [phases.build]
 cmds = [
+    'php artisan storage:link || true',
+    'php artisan migrate --force',
     'php artisan config:cache',
     'php artisan route:cache',
     'php artisan view:cache'
 ]
 
 [start]
-cmd = 'php artisan migrate --force && php artisan serve --host=0.0.0.0 --port=${PORT:-8000}'
+cmd = 'frankenphp run --config Caddyfile'
